# pyacddb

./: .gitignore  LICENSE  README.md  pyproject.toml
chatbot/: app.py  core.py  metadata.py  pyproject.toml
chatbot/acdreceive/: __init__.py  core.py  dataclient.py  llm.py  metadata.py  utils.py
chatbot/acdreceive/tests/: test_textparser.py
pyacddb/: __init__.py  core.py  metadata.py  utils.py
