[tool.poetry]
name = "acdreceive"
version = "0.1.0"
description = ""
authors = ["jannisborn <jannis.born@gmx.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.2"
requests = "^2.31.0"
pyacddb = {path = ".."}
loguru = "^0.7.2"
pandas = "^2.2.1"
python-telegram-bot = "13.7"
black = "^24.3.0"
pillow = "^10.3.0"
pytest = "^8.2.2"
together = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
